--- a/compose.yaml
+++ b/compose.yaml
@@ -4,18 +4,16 @@ services:
     restart: always
     ports:
       - "3000:80"
-    environment:
-      NODE_ENV: development
     networks:
       - app-network
   api:
     build: ./cars-api
     restart: always
     environment:
-      DB_HOST: 192.168.109.118
-      DB_USER: pn
+      DB_HOST: 192.168.149.230
+      DB_USER: test
       DB_PASS: 4321
-      DB_DATABASE: newproject
+      DB_DATABASE: carservice
       PORT: 3333
     ports:
       - "3333:3333"
