--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,19 @@ services:
       - "3000:80"
     networks:
       - app-network
+  api:
+    build: ./cars-api
+    restart: always
+    environment:
+      DB_HOST: 119.110.207.26
+      DB_USER: pn
+      DB_PASS: 4321
+      DB_DATABASE: carservicev1
+      PORT: 3001
+    ports:
+      - "3001:3001"
+    networks:
+      - app-network
 networks:
   app-network:
     driver: bridge
