--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
-    "next": "14.1.0",
+    "faker": "^6.6.6",
+    "install": "^0.13.0",
+    "next": "^14.2.0-canary.23",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
