--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "thaidatepicker-react": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
